# python-portfolio-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/portfolio_api/: app.py
src/portfolio_lab/: main.py
tests/: test_api.py  test_smoke.py
